test_src/compiler_errors/vars/DuplicateVarError1.b
class DuplicateVarError1 {
    void test() {
        Int i;
        Int i = 0;
        println(i);
    }
}
